revisao do uso de italico no termo plugin

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -336,7 +336,7 @@ minha formação acadêmica e pessoal.
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
- Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais em cursos gerenciados pelo Moodle com integração à uma plataforma de serviços de mapas conceituais, o CMPaaS. Aborda a importância do Moodle na Educação a Distância e detalha os processos e tecnologias utilizadas na construção de um plugin para ele. Discute também como é possível integrar o Moodle com outras plataformas de serviços.
+ Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais em cursos gerenciados pelo Moodle com integração à uma plataforma de serviços de mapas conceituais, o CMPaaS. Aborda a importância do Moodle na Educação a Distância e detalha os processos e tecnologias utilizadas na construção de um \textit{plugin} para ele. Discute também como é possível integrar o Moodle com outras plataformas de serviços.
 
  \textbf{Palavras-chave}: Mapas Conceituais. Moodle. CMPaaS.
 \end{resumo}
@@ -434,21 +434,21 @@ nesta plataforma.
 O Moodle foi escolhido para ser a plataforma de implementação deste projeto,
 pois é uma plataforma \textit{open-source}, ou seja, pode ser livremente modificada, e também é
 modular, permitindo que novas ferramentas sejam adicionadas a ela facilmente. Além é
-claro, de ser amplamente utilizada por instituições de ensino no mundo todo. Avaliando a lista de plugins do Moodle, foi constatado que não há nenhuma ferramenta que permita
+claro, de ser amplamente utilizada por instituições de ensino no mundo todo. Avaliando a lista de \textit{plugins} do Moodle, foi constatado que não há nenhuma ferramenta que permita
 o uso de mapas conceituais em tarefas de cursos gerenciados pela plataforma em suas
 versões mais recentes.
 
 O produto deste trabalho permitirá que estudantes dos cursos gerenciados pelo
 Moodle realizem atividades com a elaboração de mapas conceituais. Adicionado a isso, o
 editor de mapas que será implementado também irá possuir integração com o \textit{Conceptual Maps as a Service} (CMPaaS), uma plataforma que oferece diversos serviços de manipulação de mapas. Alguns desses serviços necessitam de conteúdo previamente existente para funcionar, como por exemplo o serviço de inferência de mapas.
-Devido ao Moodle ser muito utilizado, um plugin de elaboração de mapas conceituais implementado nele poderia gerar uma grande quantidade de conteúdo, que  os serviços da plataforma CMPaaS poderiam utilizar, por exemplo, o serviço de geração de inferências. Por esse motivo o plugin desenvolvido nesse trabalho também será integrado ao CMPaaS.
+Devido ao Moodle ser muito utilizado, um \textit{plugin} de elaboração de mapas conceituais implementado nele poderia gerar uma grande quantidade de conteúdo, que  os serviços da plataforma CMPaaS poderiam utilizar, por exemplo, o serviço de geração de inferências. Por esse motivo o \textit{plugin} desenvolvido nesse trabalho também será integrado ao CMPaaS.
 
 
 
 
 \section{Objetivo}
 
-O produto final deste trabalho será um plugin que disponibiliza um editor de criação de mapas conceituais em cursos da plataforma Moodle. O plugin utilizará a plataforma CMPaaS como solução de armazenamento dos mapas conceituais na nuvem.
+O produto final deste trabalho será um \textit{plugin} que disponibiliza um editor de criação de mapas conceituais em cursos da plataforma Moodle. O \textit{plugin} utilizará a plataforma CMPaaS como solução de armazenamento dos mapas conceituais na nuvem.
 
 Para alcançar o objetivo principal foram definidos os seguintes objetivos específicos:
 
