--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -344,14 +344,8 @@ minha formação acadêmica e pessoal.
 % resumo em inglês
 \begin{resumo}[Abstract]
   \begin{otherlanguage*}{english}
-    This work presents the development of a \textit{plugin}  that allows the application of concept
-    maps in courses managed on Moodle. Concept maps are a graphical tool whose function
-    is the representation of knowledge, they can have several applications in teaching, such as
-    a method of learning evaluation. Moodle is an extensive platform used by institutions
-    worldwide to manage distance learning courses. The \textit{plugin}  developed in this work is
-    integrated with CMPaaS, which is a platform that integrates several tools of conceptual
-    mapping.
- 
+    This work presents the design and development of a concept map editing plugin in courses managed on Moodle with integration to a platform of Conceptual mapping services, the CMPaaS. Addresses the importance of Moodle in Education Distance and details the processes and technologies used to build a plugin
+    for him. It also discusses how it is possible to integrate Moodle with other services. 
     \vspace{\onelineskip}
  
     \noindent 
