--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -161,6 +161,14 @@
 	year = {2016}
 }
 
+@misc{MoodlePlugin2016,
+	author = {Moodle},
+	title = {{Moodle Plugins}},
+	url = {https://moodle.org/plugins/qtype_conceptmap},
+	Urlaccessdate = {09/12/2016},
+	year = {2016}
+}
+
 
 @article{Franciscato2008,
 	abstract = {Esse artigo apresenta, os resultados decorrentes da elabora{\c{c}}{\~{a}}o de um instrumento de avalia{\c{c}}{\~{a}}o e a sua aplica{\c{c}}{\~{a}}o nos ambientes Moodle, TelEduc e Tidia – Ae. Os question{\'{a}}rios e as an{\'{a}}lises foram realizados por alunos de P{\'{o}}s – Gradua{\c{c}}{\~{a}}o da Universidade Federal de Santa Maria, com o objetivo de proporcionar a utiliza{\c{c}}{\~{a}}o de tr{\^{e}}s ambientes distintos para ampliar as experi{\^{e}}ncias com ambientes virtuais de aprendizagem (AVAs) e desenvolver condi{\c{c}}{\~{o}}es para realizar avalia{\c{c}}{\~{o}}es cr{\'{i}}ticas. Os resultados tamb{\'{e}}m foram submetidos aos gestores de EAD e a equipe de TI para tomarem conhecimento das sugest{\~{o}}es de melhorias nos AVAs utilizados na Institi{\c{c}}{\~{a}}o (Moodle na EAD e TelEduc no ensino presencial).},
