--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -289,8 +289,7 @@
     \vspace*{\fill}
     \centering
     \noindent
-    \textit{ Este trabalho é dedicado às crianças adultas que,\\
-    quando pequenas, sonharam em se tornar cientistas.} \vspace*{\fill}
+    \textit{ Este trabalho é dedicado à todos que me apoiaram durante todo o meu período acadêmico.} \vspace*{\fill}
 \end{dedicatoria}
 % ---
 
