revisao do resumo

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -335,7 +335,7 @@ minha formação acadêmica e pessoal.
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
- Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais em cursos gerenciados pelo Moodle com integração à uma plataforma de serviços de mapas conceituais, o CMPaaS. Aborda a importância do Moodle na Educação a Distância e detalha os processos e tecnologias utilizadas na construção de um \textit{plugin} para ele. Discute também como é possível integrar o Moodle com outras plataformas de serviços.
+ Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais integrado ao Moodle. O \textit{plugin} utiliza o serviço de persistência de mapas da plataforma CMPaaS, que oferece diversos serviços de processamento de mapas conceituais. São detalhados ainda os processos e tecnologias usados na construção do \textit{plugin}, e a importância de disponibilizá-lo pelo Moodle (que é central na infra-estrutura de inúmeros programas de Educação a Distância). Discute-se ainda a possibilidade de integrar o Moodle a outras plataformas e serviços.
 
  \textbf{Palavras-chave}: Mapas Conceituais. Moodle. CMPaaS.
 \end{resumo}
@@ -343,8 +343,7 @@ minha formação acadêmica e pessoal.
 % resumo em inglês
 \begin{resumo}[Abstract]
   \begin{otherlanguage*}{english}
-    This work presents the design and development of a concept map editing plugin in courses managed on Moodle with integration to a platform of Conceptual mapping services, the CMPaaS. Addresses the importance of Moodle in Education Distance and details the processes and technologies used to build a plugin
-    for him. It also discusses how it is possible to integrate Moodle with other services. 
+    This work presents the design and development of a concept map editor in the form of a Moodle plugin. The created maps are saved by using a persistence service from CMPaaS, a platform that offers several concept map processing services. The processes and technologies used in the construction of the plugin are further detailed. We also explore the importance of making it available through Moodle (which is central to the infrastructure of a considerable number of Distance Education programs). The possibility of integrating Moodle to other platforms and services is also discussed. 
     \vspace{\onelineskip}
  
     \noindent 
@@ -418,8 +417,7 @@ aula, de um livro ou capítulo ou ainda como método de avaliação. Por ser mui
 podem ser elaborados com lápis e papel, porém é possível alcançar novas aplicações ao se
 utilizar recursos computacionais.
 
-A proposta deste trabalho é justamente utilizar a computação para ampliar a apli-
-cação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que
+A proposta deste trabalho é justamente utilizar a computação para ampliar a aplicação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que
 permita o uso dos mapas no ensino a distância. Assim, este projeto visa o desenvolvimento
 de um \textit{plugin} para o gerenciador de cursos \textit{Modular Objected-Oriented Dynamic Learning Environment} (Moodle) que introduza os mapas conceituais nos cursos existentes
 nesta plataforma.
