--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,6 +7,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{santos2005,
+	author = {Santos, Paulo Sergio and Menezes, Crediné Silva de and Cury, Davidson and Nevado, Rosane Aragon de},
+	keywords = {concept maps,learning assessment},
+	journal = {XVI Simpósio Brasileiro de Informática na
+	Educação},
+	pages = {455--465},
+	title = {{Um Ambiente para Acompanhamento da Aprendizagem baseado em Mapas Conceituais}}
+}
+
 @article{marina,
 	abstract = {Resumo. A utiliza{\c{c}}{\~{a}}o de mapas conceituais como ferramenta de apoio ao processo de aprendizagem traz consigo uma sobrecarga de trabalho para o professor, podendo at{\'{e}} mesmo inviabilizar a utiliza{\c{c}}{\~{a}}o dos mesmos. Este artigo fala sobre a utiliza{\c{c}}{\~{a}}o de mapas conceituais na avalia{\c{c}}{\~{a}}o da aprendizagem e da import{\^{a}}ncia de um sistema automatizado para apoiar o professor nesta tarefa. Apresenta-se tamb{\'{e}}m uma proposta de como automatizar a verifica{\c{c}}{\~{a}}o de certos aspectos da aprendizagem explicitados em um mapa conceitual constru{\'{i}}do por um estudante. A proposta inclui o apoio {\`{a}} compara{\c{c}}{\~{a}}o de mapas constru{\'{i}}dos ao longo do curso como uma forma de avaliar a evolu{\c{c}}{\~{a}}o da aprendizagem. Palavras-chave: mapas conceituais, avalia{\c{c}}{\~{a}}o da aprendizagem, apoio automatizado Abstract. The use of conceptual maps to support learning processes in a class, brings about an extra effort to the teacher, that could even block its use. This paper is about the use of conceptual maps in learning assessment and the importance of an automatic system to support the teacher on this task. A model for automatically verifying some learning aspects explicit in a conceptual map constructed by a student is also proposed, which includes the support for comparing different conceptual maps constructed by the student as a way to assess the learning evolution.},
 	author = {Marina, Ana and Ara{\'{u}}jo, Teixeira and {Silva De Menezes}, Credin{\'{e}} and Cury, Davidson},
@@ -607,3 +616,6 @@
 	Publisher = {Perigee Books},
 	Title = {Art as Experience},
 	Year = {1980}}
+
+
+
