--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -335,8 +335,8 @@ minha formação acadêmica e pessoal.
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
- Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais integrado ao Moodle. O \textit{plugin} utiliza o serviço de persistência de mapas da plataforma CMPaaS, que oferece diversos serviços de processamento de mapas conceituais. São detalhados ainda os processos e tecnologias usados na construção do \textit{plugin}, e a importância de disponibilizá-lo pelo Moodle (que é central na infra-estrutura de inúmeros programas de Educação a Distância). Discute-se ainda a possibilidade de integrar o Moodle a outras plataformas e serviços.
-
+Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais para o Moodle de modo a favorecer a integração entre este e a plataforma de serviços CMPaaS, que oferece uma diversidade de serviços para processamento de mapas conceituais. O objetivo é oferecer ao CMPaaS uma base de usuários de ferramentas digitais que podem ser potenciais fontes de dados para a as ferramentas e pesquisas desenvolvidas no contexto do CMPaaS. São detalhados os processos e tecnologias utilizadas na construção do \textit{plugin}, bem como é apresentada uma prova de conceitos.
+	
  \textbf{Palavras-chave}: Mapas Conceituais. Moodle. CMPaaS.
 \end{resumo}
 
