--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -429,13 +429,14 @@ Para alcançar esses objetivos, foi realizada uma revisão bibliográfica aprofu
 
 \section{Objetivo}
 
-O produto final deste trabalho será um \textit{plugin} que disponibiliza um editor de criação de mapas conceituais em cursos da plataforma Moodle. O \textit{plugin} utilizará a plataforma CMPaaS como solução de armazenamento dos mapas conceituais na nuvem.
+O objetivo deste trabalho é a criação de um \textit{plugin} que disponibiliza um editor de criação de mapas conceituais em cursos da plataforma Moodle. O \textit{plugin} utilizará a plataforma CMPaaS como solução de armazenamento dos mapas conceituais na nuvem.
 
 Para alcançar o objetivo principal foram definidos os seguintes objetivos específicos:
 
 \begin{itemize}
 	\item Estudar o que são mapas conceituais e suas aplicações na educação.
-	\item Estudar a arquitetura do Moodle e seus \textit{plugins} .
+	\item Estudar a arquitetura do Moodle e seus \textit{plugins}.
+	\item Estudar técnicas e arquiteturas de integração de sistemas.
 	\item Entender a plataforma CMPaaS.
 	\item Desenvolver um novo \textit{plugin} para o Moodle segundo a arquitetura da plataforma.   
 \end{itemize} 
@@ -449,25 +450,6 @@ Para alcançar o objetivo deste trabalho inicialmente foi feita uma revisão bib
 Após isto houve a realização de um estudo sobre quais tecnologias poderiam ser utilizadas no desenvolvimento de um \textit{plugin} para o Moodle com a funcionalidade de responder tarefas com a elaboração de mapas conceituais e que pudesse utilizar o repositório de mapas do CPMaaS.
 
 Para finalizar, o \textit{plugin} foi implementado no Moodle e foram realizados testes de suas funcionalidades. 
-
-
-\section{Estrutura deste trabalho}
-
-Este trabalho será dividido em sete capítulos.
-
-O capítulo ``Introdução'' apresenta a forma que o trabalho foi planejado e organizado. Este capítulo contém uma introdução sobre o projeto, seus objetivos e a metodologia de desenvolvimento.
-
-O capítulo ``Mapas Conceituais e Educação'' expõe o que são mapas conceituais e a sua importância no ensino. Também conceitua educação a distância e apresenta a plataforma Moodle.
-
-O capítulo ``CMPAAS'' faz uma descrição sobre a  plataforma CMPaaS e a sua arquitetura.
-
-O capítulo ``O Projeto'' descreve como foi planejado o desenvolvimento do \textit{plugin}, apresentando suas funcionalidades e como será implementado.
-
-O capítulo ``Desenvolvimento'' detalha como o \textit{plugin} foi desenvolvido.
-
-O capítulo ``Implementação e Testes'' apresenta o resultado final do projeto, demonstrando sua instalação, configuração e utilização.
-
-O capítulo ``Considerações Finais'' faz uma avaliação dos resultados obtidos no trabalho e propõe trabalhos futuros.
 
 
 % ----------------------------------------------------------
